# segyio

./: CMakeLists.txt  pyproject.toml
.github/workflows/: build.yaml  large.yaml  wheels.yaml
lib/: CMakeLists.txt
lib/experimental/segyio/: segyio.hpp
lib/test/: test-include.c  test-include.cpp
python/: CMakeLists.txt  pyproject.toml  setup-CMakeLists.txt  setup.py
